--- a/hello-world/blueprint.yaml
+++ b/hello-world/blueprint.yaml
@@ -26,20 +26,20 @@ types:
 blueprint:
     name: hello_world
     nodes:
-        # -   name: virtual_ip
-        #     type: cloudify.openstack.floatingip
-        #     properties:
-        #         floatingip: 
-        #             floating_network_name: Ext-Net
+        -   name: virtual_ip
+            type: cloudify.openstack.floatingip
+            properties:
+                floatingip: 
+                    floating_network_name: Ext-Net
 
-        # -   name: security_group
-        #     type: cloudfiy.openstack.security_group
-        #     properties:
-        #         security_group:
-        #             name: webserver_security_group
-        #         rules:
-        #             -   remote_ip_prefix: 0.0.0.0/0
-        #                 port: 8080            
+        -   name: security_group
+            type: cloudfiy.openstack.security_group
+            properties:
+                security_group:
+                    name: webserver_security_group
+                rules:
+                    -   remote_ip_prefix: 0.0.0.0/0
+                        port: 8080            
 
         -   name: vm
             type: cloudify.openstack.server
@@ -57,12 +57,12 @@ blueprint:
                     image: 8c096c29-a666-4b82-99c4-c77dc70cfb40
                     flavor: 102
                     key_name: cloudify-agents-kp
-                    security_groups: ['default']
-            # relationships:
-            #     -   type: cloudify.openstack.server_connected_to_floating_ip
-            #         target: virtual_ip
-            #     -   type: cloudify.relationships.connected_to
-            #         target: security_group                    
+                    security_groups: ['default', 'allPorts']
+            relationships:
+                -   type: cloudify.openstack.server_connected_to_floating_ip
+                    target: virtual_ip
+                -   type: cloudify.relationships.connected_to
+                    target: security_group                    
 
 
         -   name: http_web_server
